# deskhalloumi

./: .gitignore  AGENTS.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  KEYBINDINGS.md  LICENSE  README.md  bridge.yml  roadmap.yml  tasks.yml  todo.yml  unilii.example.toml
.github/workflows/: ci.yml  release.yml
contrib/systemd/user/: deskhalloumi-hotkeyd.service  unilii-hotkeyd.service
docs/: README.md  async-runtime.md  bar-architecture.md  copyq-frontend-apispec.md  hotkey-action-matrix.md  hotkeyd-architecture.md  hotkeyd-i3-feasibility.md  hotkeyd-operations.md  hotkeyd.md  i3-active-audit-2026-07-18.md  i3-vis-menu.md  installation.md  menu-design-system.md  project-renaming.md  roadmap.md  runtime-contracts.md  system-menubar.md  unilii-bar.md  versioning.md
docs/releases/: 0.2.0.md  0.3.0.md
examples/: deskhalloumi.toml  unilii.toml
examples/bar/: full.toml  minimal.toml  scripts.toml
examples/hotkeyd/: README.md  embedded-bar-hotkeys.toml  hotkeys.toml
examples/system-menubar/: README.md  unilii.toml  xrandr-presets.yml
scripts/: audit_live_session_commands.py  check_release_metadata.py  test_i3_hotkeys.sh  test_safe.sh
templates/: bar.toml
unilii/: Cargo.toml
unilii/core/: Cargo.toml
unilii/core/src/: action_bus.rs  action_history.rs  bar.rs  bar_runtime.rs  branding.rs  config.rs  filter_tab.rs  hotkey_control.rs  i3_config.rs  i3_keybindings.rs  i3_vis.rs  key_engine.rs  key_import_sxhkd.rs  keys.rs  lib.rs  menu.rs  menu_process.rs  quick_select.rs  x11_hotkeys.rs
unilii/core/src/runtime/: action.rs  metrics.rs  mod.rs  provider.rs  refresh.rs  supervisor.rs
unilii/core/tests/: key_dry_run_tests.rs  key_engine_tests.rs  sxhkd_import_tests.rs
unilii/core/tests/fixtures/sxhkd/: migration-corpus.sxhkd
unilii/docs/plans/: 2025-02-27-iced-status-bar-c-plus.md  2026-04-16-menus-keybinding-daemon-spec.md  2026-04-16-menus-keybinding-implementation-plan.md  2026-05-16-canonical-interaction-architecture.md
unilii/lib/: Cargo.toml
unilii/lib/src/: input.rs  lib.rs  process.rs
unilii/lib/src/calendar/: cache.rs  caldav.rs  mod.rs  provider.rs
unilii/lib/src/sysfs/: backlight.rs  mod.rs  power.rs
unilii/lib/src/util/: mod.rs  udev.rs
unilii/lib/tests/: calendar_cache_tests.rs
unilii/plugins/: Cargo.toml
unilii/plugins/Battery/: Cargo.toml
unilii/plugins/Battery/src/: lib.rs
unilii/plugins/Clock/: Cargo.toml
unilii/plugins/Clock/src/: lib.rs
unilii/plugins/Tmux/: Cargo.toml
unilii/plugins/Tmux/src/: lib.rs
unilii/src/: battery.rs  lib.rs  main.rs.bak  util.rs
unilii/tests/: lib_tests.rs  unilii_tests.rs
