[workspace]
members = ["core", "bin", "plugins/*", "lib"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["unilii contributors"]

[workspace.dependencies]
# Core dependencies
iced = { git = "https://github.com/VirtCode/iced.git", features = ["advanced", "tokio", "winit"] }
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "time", "sync", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Internal
unilii-lib = { path = "lib" }
unilii-core = { path = "core" }
