[package]
name = "deskhalloumi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
# The unilii library package provides helper utilities
deskhalloumi-lib.workspace = true

[lib]
name = "deskhalloumi"
path = "src/lib.rs"

[dev-dependencies]
chrono.workspace = true
tokio.workspace = true
futures-util = "0.3"
