[package]
name = "unilii-core"
version.workspace = true
edition.workspace = true

[dependencies]
iced.workspace = true
tokio.workspace = true
serde.workspace = true
async-trait.workspace = true
toml.workspace = true
tracing.workspace = true
directories.workspace = true
unilii-lib.workspace = true
futures = "0.3"
glob = "0.3"
