[package]
name = "deskhalloumi-battery"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
deskhalloumi-core.workspace = true
deskhalloumi-lib.workspace = true
iced.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures = "0.3"
