[package]
name = "deskhalloumi-tmux"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[lib]
name = "deskhalloumi_tmux"
path = "src/lib.rs"

[dependencies]
deskhalloumi-core = { path = "../../core" }
async-trait = "0.1"
iced = "0.14"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
